@@ -20,8 +20,8 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.util.Arrays;
 import java.util.HashMap;
-import java.util.List;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
@@ -134,13 +134,16 @@ public class AccountClientUnitTest {
             ClientBuilder<AccountClient> test =
                     AccountClient.builder(OUTSETA_URL);
 
+            Map<String, String> m = new HashMap<>();
+            m.put("Authorization", "dummy");
+
             assertEquals(test, test.apiKey(OUTSETA_KEY));
             assertEquals(test, test.accessKey(OUTSETA_KEY));
             assertEquals(test, test.parser(parserFacade));
             assertEquals(test, test.baseUrl(OUTSETA_URL));
             assertEquals(test, test.requestMaker("DEFAULT"));
             assertEquals(test, test.headers(
-                    Map.of("Authorization", "dummy")));
+                    m));
             assertEquals(test, test.requestMaker(RequestMakerType.DEFAULT));
 
             AccountClient accountClient1 = test.build();
@@ -278,7 +281,7 @@ public class AccountClientUnitTest {
 
             ItemPage<Account> itemPage = new ItemPage<>(
                     new Metadata(1, 0, 1),
-                    List.of(account)
+                    Arrays.asList(account)
             );
 
             when(requestMaker.get(OUTSETA_URL + "/crm/accounts",
