@@ -18,8 +18,8 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.util.Arrays;
 import java.util.HashMap;
-import java.util.List;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
@@ -121,13 +121,16 @@ public class ActivityClientUnitTest {
             ClientBuilder<ActivityClient> test =
                     ActivityClient.builder(OUTSETA_URL);
 
+            Map<String, String> m = new HashMap<>();
+            m.put("Authorization", "dummy");
+
             assertEquals(test, test.apiKey(OUTSETA_KEY));
             assertEquals(test, test.accessKey(OUTSETA_KEY));
             assertEquals(test, test.parser(parserFacade));
             assertEquals(test, test.baseUrl(OUTSETA_URL));
             assertEquals(test, test.requestMaker("DEFAULT"));
             assertEquals(test, test.headers(
-                    Map.of("Authorization", "dummy")));
+                    m));
             assertEquals(test, test.requestMaker(RequestMakerType.DEFAULT));
 
             ActivityClient activityClient1 = test.build();
@@ -219,7 +222,7 @@ public class ActivityClientUnitTest {
 
             ItemPage<Activity> itemPage = new ItemPage<>(
                     new Metadata(1, 0, 1),
-                    List.of(activity)
+                    Arrays.asList(activity)
             );
 
             when(requestMaker.get(OUTSETA_URL + "/activities",
